# ai-fastapi-iris

./: .gitignore  README.md  pyproject.toml
app/: main.py  schemas.py
app/ml/: model.py
models/: iris_model.joblib
scripts/: train_model.py
tests/: test_api.py
