[project]
name = "ai-fastapi-iris"
version = "0.1.0"
description = "FastAPI + scikit-learn model served as API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]
